[package]
name = "day9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
common = { path = "../common" }
ndarray = "0.15.6"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["full"] }
